fix: 스탬프 라우팅 오류 수정 + 스웨거 경로 수 정
